# sysadmin-toolkit

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENTS-2025-10-15.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml  schedule_task.ps1  security_updates.ps1  startup_script.ps1  uv.toml
.claude/: CLAUDE.md
.githooks/: pre-commit-security
.github/: REPOSITORY_TOPICS.md  dependabot.yml  markdown-link-check-config.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: README.md  ci.yml  labeler.yml  pr-checks.yml  release.yml  secret-scan.yml  security-scan.yml  syntax-check.yml  test-scripts.yml
Linux/desktop/: fresh-desktop-setup.sh
Linux/docker/: README.md  config.example.json  docker-cleanup.sh
Linux/gpu/: README.md  config.example.json  nvidia-gpu-exporter.sh
Linux/kubernetes/: README.md  pod-health-monitor.sh  pvc-monitor.sh
Linux/maintenance/: README.md  config.example.json  disk-cleanup.sh  log-cleanup.sh  restore-previous-state.sh  system-update.sh  system-updates.sh
Linux/monitoring/: README.md  grafana-dashboard-gpu.json  grafana-dashboard-kubernetes.json  grafana-dashboard-maintenance.json  service-health-monitor.sh  ssl-cert-check.sh  system-health-check.sh
Linux/security/: README.md  security-hardening.sh
Linux/server/: README.md  docker-lab-environment.sh  headless-server-setup.sh  ubuntu-server-maintenance.sh
Windows/: SETUP_SCRIPTS_README.md  choco-list.txt  schedule_task.ps1  startup_script.ps1
Windows/backup/: Backup-BrowserProfiles.ps1  Backup-DeveloperEnvironment.ps1  Backup-UserData.ps1  Export-SystemState.ps1  README.md  Restore-DeveloperEnvironment.ps1  Test-BackupIntegrity.ps1
Windows/cloud/: Get-CloudResources.ps1
Windows/development/: Manage-Docker.ps1  Manage-WSL.ps1  README.md  Test-DevEnvironment.ps1  remote-development-setup.ps1
Windows/first-time-setup/: Compare-SoftwareInventory.ps1  QUICKSTART.md  README.md  chocolatey-packages.config  export-current-packages.ps1  fresh-windows-setup.ps1  home-desktop-setup.ps1  install-from-exported-packages.ps1  package-cleanup.ps1  winget-packages.json  work-laptop-setup.ps1
Windows/lib/: CommonFunctions.psd1  CommonFunctions.psm1  ErrorHandling.psm1
Windows/maintenance/: README.md  Restore-PreviousState.ps1  cleanup-disk.ps1  config.example.json  fix-monthly-tasks.ps1  security-updates.ps1  setup-scheduled-tasks.ps1  startup_script.ps1  system-integrity-check.ps1  system-updates.ps1  update-defender.ps1
Windows/monitoring/: Get-ApplicationHealth.ps1  Get-EventLogAnalysis.ps1  Get-SystemPerformance.ps1  README.md  Test-NetworkHealth.ps1  Watch-DiskSpace.ps1  Watch-ServiceHealth.ps1
Windows/network/: Manage-VPN.ps1  README.md  Set-StaticIP.ps1
Windows/package-lists/: chocolatey-packages.txt  winget-packages.txt
Windows/reporting/: Get-SystemReport.ps1  README.md
Windows/security/: Get-UserAccountAudit.ps1  README.md  audit-security-posture.ps1  backup-security-settings.ps1  complete-system-setup.ps1  fix-netbios.ps1  harden-level1-safe.ps1  harden-level2-balanced.ps1  harden-level3-maximum.ps1  restore-security-settings.ps1  system-health-check.ps1
Windows/ssh/: README.md  SETUP-SSH-SERVER.md  complete-ssh-setup.ps1  gitea-tunnel-manager.ps1  (+2 more)
docs/: ROADMAP.md  SCRIPT_TEMPLATE.md  TROUBLESHOOTING.md
examples/: .env.example  README.md  docker-cleanup.config.example.json  example-bash-script.sh  example-powershell-script.ps1  example-python-script.py  monitoring.config.example.json
logs/: .gitkeep
scripts/: validate-code-quality.ps1  validate-code-quality.sh
tests/: Benchmark.ps1  CodeCoverage.pester.ps1  MockHelpers.psm1  README.md  TESTING_STRATEGY.md  TestHelpers.psm1  analyze-coverage-by-dir.ps1  analyze-lib-coverage.ps1  full-coverage-analysis.ps1  get-coverage-summary.ps1  parse-coverage.ps1  quick-lib-coverage.ps1  run-tests.ps1  test-commonfunctions-coverage.ps1
(+48 files in other folders)
